# rust_cdc_hub

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.en.md  README.md  config_example.yaml  debian.dockerfile  docker-entrypoint.sh
common/: Cargo.toml
common/src/: case_insensitive_hash_map.rs  checkpoint_manager.rs  custom_error.rs  lib.rs  metrics.rs  mysql_checkpoint.rs  runtime_progress.rs  schema.rs
config_examples/: config_example_dameng.yaml  config_example_meili.yaml  config_example_mysql.yaml
docs/: mysql-to-dameng-migration-notes.md
mysql_to_dameng/: Cargo.toml
mysql_to_dameng/src/: lib.rs
plugin/: Cargo.toml
plugin/plugin_column_in/: Cargo.toml
plugin/plugin_column_in/src/: lib.rs
plugin/plugin_column_plus/: Cargo.toml
plugin/plugin_column_plus/src/: lib.rs
plugin/src/: lib.rs
sink/: .gitignore  Cargo.toml
sink/sink_dameng/: Cargo.toml
sink/sink_dameng/src/: lib.rs
sink/sink_meilisearch/: Cargo.toml
sink/sink_meilisearch/src/: lib.rs
sink/sink_mysql/: Cargo.toml
sink/sink_mysql/src/: lib.rs
sink/sink_print/: Cargo.toml
sink/sink_print/src/: lib.rs
sink/sink_starrocks/: Cargo.toml
sink/sink_starrocks/src/: lib.rs  starrocks_client.rs
sink/src/: lib.rs
source/: Cargo.toml
source/source_mysql/: Cargo.toml
source/source_mysql/src/: lib.rs
source/src/: lib.rs
src/: main.rs
