[workspace]
members = ["source", "sink", "common", "plugin"]

[package]
name = "rust_cdc_hub"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "common" }
source = { path = "source" }
sink = { path = "sink" }
plugin = { path = "plugin" }
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
chrono = "0.4"
