[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.42"
tracing = "0.1"
strum_macros = "0.27.2"
sqlx = { version = "0.8", default-features = false, features = ["mysql", "tls-rustls", "runtime-tokio", "sqlx-macros", "chrono", "bigdecimal", "macros", "json"] }
md5 = "0.8"
