[package]
name = "sink_dameng"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
common = { path = "../../common" }
mysql_to_dameng = { path = "../../mysql_to_dameng" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
async-trait = "0.1.89"
dameng = "0.1.0"
dameng-types = "0.1.0"
