[package]
name = "sink_mysql"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
meilisearch-sdk = "0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
sqlx = { version = "0.7.4", default-features = false, features = ["mysql", "tls-rustls", "runtime-tokio", "sqlx-macros", "chrono", "bigdecimal"] }
