[package]
name = "sink_mysql"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
common = { path = "../../common" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
sqlx = { version = "0.8.6", default-features = false, features = ["mysql", "tls-rustls", "runtime-tokio", "sqlx-macros", "chrono", "bigdecimal"] }
async-trait = "0.1.89"
