[package]
name = "sink_starrocks"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
meilisearch-sdk = "0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0"
