[package]
name = "source_mysql"
version = "0.1.0"
edition = "2024"

[dependencies]
mysql-binlog-connector-rust = "0.3.3"
tokio = { version = "1", features = ["full"] }
common = { path = "../../common" }
async-trait = "0.1.89"
#sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
sqlx = { version = "0.8", default-features = false, features = ["mysql", "tls-rustls", "runtime-tokio", "sqlx-macros", "chrono", "bigdecimal"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
#rust_decimal = "1"

#sqlx-mysql = { version = "0.8", features = ["bigdecimal"] }
#decimal = { version = "2.1", features = ["serde"] }
