[package]
name = "source_mysql"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
mysql-binlog-connector-rust = "0.3.3"
tokio = { version = "1", features = ["full"] }
common = { path = "../../common" }
async-trait = "0.1.89"
sqlx = { version = "0.8.6", default-features = false, features = ["mysql", "tls-rustls", "runtime-tokio", "sqlx-macros", "chrono", "bigdecimal", "macros", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
regex = "1.12.3"
